Fix typos in footnotes of chapter 3

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -28,10 +28,10 @@
 %\usepackage{titlepic}
 %\usepackage{fancyhdr}
 %\usepackage[simplified]{styles/pgf-umlcd}
-\usepackage{shorttoc}
+%\usepackage{shorttoc}
 \usepackage{url}
 %\usepackage{paralist}
-\usepackage{dirtytalk}
+%\usepackage{dirtytalk}
 %\usepackage{verbatim}
 
 \definecolor{grey}{rgb}{0.9, 0.9, 0.9}
@@ -205,10 +205,10 @@ SESQUIPEDALIA VERBA PUBLISHING LTD
 \paragraph{} There will be a number of core steps involved in getting acquainted with the learning environment:
 
 \begin{enumerate}
-\item Linux Development Server - Our Ubuntu Linux Virtual Machine which runs on the ENU virtual infrastructure. Each of you will be provided with the address of a specific virtual machine which is your personal learning environment. You will be able to log into this machine using your regular Napier credentials (matriculation number and password) just like you log into regular desktop machines on campus. Your VM is a basic Ubuntu server installation so we will have to install additional software as we go along. However you only have a limited virtual hard-drive so try to restrain yourself from going wild. As a result, you will have access to the \emph{sudo} command to enable you to manipulate your VM as a root user. This means that you can do anything you like to the VM which includes breaking it beyond repair\footnote{If you do break your VM then contact me and I will ask Inforamtion Services to reset it. This means that everything on your VM that is not backed up will be lost -- so keep backups (ideally keep all your work in Git and make copious notes as you go along)}.
+\item Linux Development Server - Our Ubuntu Linux Virtual Machine which runs on the ENU virtual infrastructure. Each of you will be provided with the address of a specific virtual machine which is your personal learning environment. You will be able to log into this machine using your regular Napier credentials (matriculation number and password) just like you log into regular desktop machines on campus. Your VM is a basic Ubuntu server installation so we will have to install additional software as we go along. However you only have a limited virtual hard-drive so try to restrain yourself from going wild. As a result, you will have access to the \emph{sudo} command to enable you to manipulate your VM as a root user. This means that you can do anything you like to the VM which includes breaking it beyond repair\footnote{If you do break your VM then contact me and I will ask Information Services to reset it. This means that everything on your VM that is not backed up will be lost -- so keep backups (ideally keep all your work in Git and make copious notes as you go along)}.
 \item SSH - To enable us to connect from our Windows desktop machine to our virtual Linux machine
 \item CLI - The Command Line Interface (CLI) where we'll type commands
-\item Vim - This is our \emph{non-graphical} editor that we shall use to write our source code and to edit configuration files. There are lots of command line editors available. Pico and Nano are alternatives, and you are welcome to use whichever command line editor you like. However, this workbook will assume that your default editor is Vim and so your might have to adjust some commands and procedures as a result of using something different. Note that there is a good reason to have some ability to ues Vim; it is one of the most prevalent editors to be found on servers. So if you are dumped on a remote server and need to fix something, Vim is one tool that you can usually expect to find\footnote{This applies to Unix, Linux, Macos, etc. servers. Basically nearly all servers, except Windows, then all bets are off. But who deploys a web site to a Windows server?}.
+\item Vim - This is our \emph{non-graphical} editor that we shall use to write our source code and to edit configuration files. There are lots of command line editors available. Pico and Nano are alternatives, and you are welcome to use whichever command line editor you like. However, this workbook will assume that your default editor is Vim and so your might have to adjust some commands and procedures as a result of using something different. Note that there is a good reason to have some ability to ues Vim; it is one of the most prevalent editors to be found on servers. So if you are dumped on a remote server and need to fix something, Vim is one tool that you can usually expect to find\footnote{This applies to Unix, Linux, MacOS, etc. servers. Basically nearly all servers, except Windows. If you're on Windows then all bets are off. But who deploys a web site to a Windows server?}.
 \item Git - We shall use Git to store our source code and as part of the ``hand in'' for our coursework assignments. You will need to put your final project work into a Git repository and zip it up then upload that zip archive to the Moodle link. The reason for this is that there are various levels of internal and external moderation of assignments that occur and having everything in one place makes these moderation processes operate more smoothly. You are also encouraged to make a backup of your repository to another location, e.g. your own laptop, GitHub, GitLab, BitBucket, or wherever. Note that the GitHub and BitBucket interfaces will automatically give you a link to download your repostiory as a zip file which can be useful at submission time.
 \end{enumerate}
 
