Fix VM numbering scheme examples. Use of yearcode from 22/23 onwards to separate years

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -227,7 +227,7 @@ SESQUIPEDALIA VERBA PUBLISHING LTD
 
 \paragraph{} What you will notice is that your Linux server is command line only. There is no GUI, no mouse, no point-and-click, and no graphical software. Instead we will have to get used to interacting with the computer using text commands. This is because the vast majority of web servers are text-only. Graphical interfaces provide more complexity, more things to go wrong, and require more hardware to support them whereas we want our web-servers to be robust and performant. Consider this an introduction to how the majority of real-world web-servers exist. There is a very good chance that if you work in any software-centric capacity in the future, then you might have to deal with command-line oriented servers, so why not get used to that now? You might like it.
 
-\paragraph{} Because our server is command line only we'll have to learn some new tools, or at least new ways to interact with tools that we might have already seen, but via GUIs. Eventually your development server will include Python, Flask, SQLite, and Vim, and perhaps even some additional tools installed. We will install them as we go along. By default though you have the standard Linux command line tools. When you log in, the text environment that you are presented with is called a shell and the name of the specific shell we use is called BASH. BASH is, in itself, a programming environment which will run `BASH scripts'. BASH is really useful for whipping up quick bits of code to solve problems, especially those that involve lots of repetition, i.e. the kinds of things that a computer is good at. We will access this server using PuTTY, or any other SSH client using our regular Napier credentials, e.g. your matriculation number and password. You will be able to find out exactly which VM you have access to but all servers will have an address of the following basic form: \url{webtech-NUMBER.napier.ac.uk}, for example, I will be using  \url{webtech-00.napier.ac.uk} as a demonstration environment that matches your learning environment. Note that you won't be able to access any of the other VMs so there is no point in trying. The list of mappings of VM to matriculation number should be available on the module's Moodle page from week \#1. If your matriculation number isn't listed then contact the module leader. The list is generated automatically from enrollment data which isn't always accurate until after the start of the trimester. We'll get into the actual logging in process in just a moment. There are some preliminary things to cover first.
+\paragraph{} Because our server is command line only we'll have to learn some new tools, or at least new ways to interact with tools that we might have already seen, but via GUIs. Eventually your development server will include Python, Flask, SQLite, and Vim, and perhaps even some additional tools installed. We will install them as we go along. By default though you have the standard Linux command line tools. When you log in, the text environment that you are presented with is called a shell and the name of the specific shell we use is called BASH. BASH is, in itself, a programming environment which will run `BASH scripts'. BASH is really useful for whipping up quick bits of code to solve problems, especially those that involve lots of repetition, i.e. the kinds of things that a computer is good at. We will access this server using PuTTY, or any other SSH client using our regular Napier credentials, e.g. your matriculation number and password. You will be able to find out exactly which VM you have access to but all servers will have an address of the following basic form: \url{webtech-YEARCODE-VMNUMBER.napier.ac.uk}, for example, I will be using  \url{webtech-2223-00.napier.ac.uk} as a demonstration environment that matches your learning environment. Note that you won't be able to access any of the other VMs so there is no point in trying. The list of mappings of VM to matriculation number should be available on the module's Moodle page from week \#1. If your matriculation number isn't listed then contact the module leader. The list is generated automatically from enrollment data which isn't always accurate until after the start of the trimester. We'll get into the actual logging in process in just a moment. There are some preliminary things to cover first.
 
 \section{Alternative Learning Environments (optional)}
 \label{alternatives}
