--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -246,10 +246,10 @@ SESQUIPEDALIA VERBA PUBLISHING LTD
 \paragraph{} If you are on Linux, MacOS, or newer versions of Windows then you will already have a version of SSH installed and all you need to do is open a terminal and type the following to log into your dev server:
 
 \begin{lstlisting}[style=DOS]
-    $ ssh MATRICNUMBER@webtech-NUMBER.napier.ac.uk
+    $ ssh MATRICNUMBER@webtech0YEARCODE-VMNUMBER.napier.ac.uk
 \end{lstlisting}
 
-\paragraph{} NB. You \emph{MUST} replace MATRICNUMBER with your actual matriculation number from your napier credentials. You also need to replace NUMBER with the specific VM number you were assigned. Note that we should be very careful to type commands accurately, especially the log in command above, and to also to type our password accurately. If we make too many mistakes then the security service on the server will ban you for a period of time. This is a protection to stop attackers from trying multiple attempts at our passwords in order to gain access to the machine. Currently the security setup is quite sensitive, about 2 failed login attempts can get you banned from logging in for about 5 minutes.
+\paragraph{} NB. You \emph{MUST} replace MATRICNUMBER with your actual matriculation number from your napier credentials. You also need to replace VMNUMBER with the specific VM number you were assigned and YEARCODE with the academic year, e.g. 2223 for the academic year starting in 2022 and ending in 2023. Note that we should be very careful to type commands accurately, especially the log in command above, and to also to type our password accurately. If we make too many mistakes then the security service on the server will ban you for a period of time. This is a protection to stop attackers from trying multiple attempts at our passwords in order to gain access to the machine. Currently the security setup is quite sensitive, about 2 failed login attempts can get you banned from logging in for about 5 minutes.
 
 \paragraph{} You will be asked for your password but note that the characters of your password won't be shown on screen when you type it in. In fact nothing is shown. This is expected and desirable behaviour and means that someone who is shoulder surfing you cannot determine even how long your password is merely from viewing your screen.
 
