--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -200,7 +200,7 @@ SESQUIPEDALIA VERBA PUBLISHING LTD
 \item Git - We shall use Git to store our source code and as part of the ``hand in'' for our coursework assignments. You will need to put your final project work into a Git repository and zip it up then upload that zip archive to the Moodle link. The reason for this is that there are various levels of internal and external moderation of assignments that occur and having everything in one place makes these moderation processes operate more smoothly. You are also encouraged to make a backup of your repository to another location, e.g. your own laptop, GitHub, GitLab, BitBucket, or wherever. Note that the GitHub and BitBucket interfaces will automatically give you a link to download your repostiory as a zip file which can be useful at submission time.
 \end{enumerate}
 
-\paragraph{} By the end of this section of the module you should be able to access your Linux VM by logging in using SSH, navigate around the command-line, use Vim (or similar) to edit your files, and use Git to store your files. This constitutes a core set of tools that should allow you to log into almost any Linux server, whether a very small one running on a Raspberry Pi\footnote{\url{https://www.raspberrypi.org}} or a very large one, for example the top 10 fastest supercomputers in the world all run a version of Linux\footnote{\url{http://www.top500.org/lists/2015/06/}}, and feel quite at home very quickly. I am not expecting you to achieve all of this in just a single lab session, but you should accomplish this easily within the lab \emph{and} this week's self-study time.
+\paragraph{} By the end of this section of the module you should be able to access your Linux VM by logging in using SSH, navigate around the command-line, use Vim (or similar) to edit your files, and use Git to store your files. This constitutes a core set of tools that should allow you to log into almost any Linux server, whether a very small one running on a Raspberry Pi\footnote{\url{https://www.raspberrypi.org}} or a very large one, for example the top 10 fastest supercomputers in the world all run a version of Linux\footnote{\url{https://top500.org/lists/top500/2022/06/}}, and feel quite at home very quickly. I am not expecting you to achieve all of this in just a single lab session, but you should accomplish this easily within the lab \emph{and} this week's self-study time.
 
 \begin{framed}
 \textbf{IMPORTANT} It is a good habit for you to keep notes whenever you are learning a new tool or environment. I keep a textfile on my computer which also means that I can occasionally copy and paste commands if necessary. I also keep a paper-based notebook for more reflextive thoughts and ideas. This way you won't have to immediately remember how you solved a problem but can look how you did it last time. This makes the whole process much less frustrating. It is how I learned to work with Linux and Git and I still refer to my notes every so often when trying to do something that I rarely do and can't quite remember the syntax for.
