--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -1754,6 +1754,7 @@ url = http://127.0.0.1:5000
 
 \begin{lstlisting}
 import configparser
+
 from flask import Flask
 
 app = Flask(__name__)
@@ -1761,36 +1762,39 @@ app = Flask(__name__)
 def init(app):
     config = configparser.ConfigParser()
     try:
-        config_location = "etc/test.cfg"
+        print("INIT FUNCTION")
+        config_location = "etc/defaults.cfg"
         config.read(config_location)
-
+        
         app.config['DEBUG'] = config.get("config", "debug")
         app.config['ip_address'] = config.get("config", "ip_address")
         app.config['port'] = config.get("config", "port")
-        app.config["url"] = config.get("config", "url")
+        app.config['url'] = config.get("config", "url")
     except:
-        print("Couldn't read configs from: ", config_location)
+        print ("Could not read configs from: ", config_location)
 
 init(app)
 
 @app.route('/')
 def root():
-    return "Hello from the config testing app"
+  return "Hello Napier from the configuration testing app"
 
 @app.route('/config/')
 def config():
-    s = []
-    s.append('debug: '+str(app.config['DEBUG']))
-    s.append('port: '+str(app.config['port']))
-    s.append('url: '+str(app.config['url']))
-    s.append('ip_address: '+str(app.config['ip_address']))
-    return ', '.join(s)
+  s = []
+  s.append('debug:'+str(app.config['DEBUG']))
+  s.append('port:'+app.config['port'])
+  s.append('url:'+app.config['url'])
+  s.append('ip_address:'+app.config['ip_address'])
+  return ', '.join(s)
 
-if __name__ == "__main__":
+if __name__ == '__main__':
     init(app)
     app.run(
-        host = app.config['ip_address'],
-        port = int(app.config['port']))
+        host=app.config['ip_address'], 
+        port=int(app.config['port']))
+
+
 \end{lstlisting}
 
 \paragraph{}  Notice how we are `getting' the value for each key from the config file then storing those values in the app.config object. 
@@ -2283,7 +2287,7 @@ for a little bit of style</p>
 
 
 \begin{lstlisting}[style=DOS]
-    $ sudo apt get install sqlite3
+    $ sudo apt-get install sqlite3
 \end{lstlisting}
 
 Now it's installed you can run the command line SQLite3 client by executing the following command:
